Fix checkstyle warnings.